--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@google/genai": "^1.17.0",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
