--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "lenis": "^1.3.11",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5"
   },
